# auto_labeler

./: .gitignore  README.md  config.json  detection_result.py  main.py  pipeline.py  pyproject.toml  run.py  save_manager.py  source_factory.py  utils.py  visualizer.py
dataset/test/: annotations.json
dataset/train/: annotations.json
dataset/val/: annotations.json
